--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/icon.ico"
+      href="https://cdn.discordapp.com/attachments/1341687232855146565/1341709124139876422/SemiColonError_3.png?ex=67b6fb7e&is=67b5a9fe&hm=9b7ee48b674e115ed214f947791cf92793ab7d44016a2f7e33005bf8bf90816d&"
     />
     <!-- href="/vite.svg" -->
     <meta
@@ -14,59 +14,13 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Shadcn/React - Landing template</title>
-    <meta
-      name="title"
-      content="Shadcn/React - Landing template"
-    />
-    <meta
-      name="description"
-      content="Free Shadcn landing page for React developers"
-    />
+    <title>SemiColonError-Page</title>
+    
+   
     <!-- Open Graph / Facebook -->
-    <meta
-      property="og:type"
-      content="website"
-    />
-    <meta
-      property="og:url"
-      content="https://github.com/leoMirandaa/shadcn-landing-page.git"
-    />
-    <meta
-      property="og:title"
-      content="Shadcn/React - Landing template"
-    />
-    <meta
-      property="og:description"
-      content="Free Shadcn landing page for React developers"
-    />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
-    />
-
-    <!-- Twitter -->
-    <meta
-      name="twitter:card"
-      content="summary_large_image"
-    />
-
-    <meta
-      name="twitter:url"
-      content="https://github.com/leoMirandaa/shadcn-landing-page.git"
-    />
-    <meta
-      name="twitter:title"
-      content="Shadcn/React - Landing template"
-    />
-    <meta
-      name="twitter:description"
-      content="Free Shadcn landing page for React developers"
-    />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
-    />
+   
+   
+  
   </head>
   <body>
     <div id="root"></div>
